--- a/Forside/index.html
+++ b/Forside/index.html
@@ -1,99 +1,187 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../header.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" href="Billeder/PenisAvatar.jpg" type="image/gif" sizes="16x16">
-
-
-
-
-
-
+<title>Aarhus Lokationer</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-    <!-- Header -->
-    <div class="topnav">
-      <a class="active" href="../Forside/index.html">Forside</a>
-      <a href="../BesogOs/index.html">Besøg os</a>
-      <a href="../Deltag/index.html">Deltag</a>
-      <a href="../StotOs/index.html">Støt os</a>
-      <a href="../OmOs/index.html">Om os</a>
-      <a href="../Uddannelse/index.html">Uddannelse</a>
 
-      <a href="../Donation/index.html">Donation</a>
-      <a href="../Lokation/index.html">Lokation</a>
-      <div class="logotop">
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#home" class="w3-bar-item w3-button"><b>Milles</b> Teater</a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#projects" class="w3-bar-item w3-button">Forestillinger</a>
+      <a href="#about" class="w3-bar-item w3-button">Om os</a>
+      <a href="#contact" class="w3-bar-item w3-button">Kontakt</a>
+    </div>
+  </div>
+</div>
+
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:100%;" id="home">
+  <img class="w3-image" src="Forside.jpg" alt="Architecture" width="100%">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Milles</b></span> <span class="w3-hide-small w3-text-light-grey">Teater</span></h1>
+  </div>
+</header>
+
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
+
+  <!-- About Section -->
+  <div class="w3-container w3-padding-32" id="about">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Hvad er det her?!</h3>
+    <p>Sommeren er på vej og regeringen løsner endelig grebet om det offentlige forsamlingsforbudet, derfor er det ideelt at kunne komme ud og hygge sig med sine venner, 
+      familie eller den specielle ene, vores hjemmeside har noget for alle! Vores hold har brugt utallige timer på at finde de steder i Aarhus som er perfekte at hænge ud.
+      Hvis du har problemer med at finde et sted at være, er dette stedet for dig. Vores hjemmeside viser udendørs arealer hvor der er bænke, toiletter, græsareal at spille 
+      på og hvor mange mennesker man burde regne med der er, derudover kan folk kommenterer på stedet og give en bedømmelse
+    </p>
+  </div>
+
+  <!-- Project Section -->
+  <div class="w3-container w3-padding-32" id="projects">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Lokationer</h3>
+  </div>
+
+
+   <!-- First Photo Grid-->
+   <div class="w3-row-padding">
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a href="Ravnholt.html" style="text-decoration:none;">
+      <img src="Billeder/test1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Test Lokation</b></p>
+        <p>Bænken her er sekluderet fra alt støj som trafik, det eneste der kan finde på at forstyrre en er den okasionelle hundelufter</p>
+      </div>
+    </a>
+    </div>
+
+    <div class="w3-third w3-container w3-margin-bottom">
+      <img src="/w3images/lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
 
+    <div class="w3-third w3-container">
+      <img src="/w3images/nature.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
 
-
-
-    <!-- Slideshow container -->
-<div class="slideshow-container">
-
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="Dirty.png" style="width:100%">
-    <div class="text">Dirty Dancing</div>
+  </div>
+  
+  <!-- Second Photo Grid-->
+  <div class="w3-row-padding">
+    <div class="w3-third w3-container w3-margin-bottom">
+      <img src="/w3images/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container">
+      <img src="/w3images/p3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
   </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="Robinhood.png" style="width:100%">
-    <div class="text">Robinhood</div>
+  <!-- Third Photo Grid-->
+  <div class="w3-row-padding">
+    <div class="w3-third w3-container w3-margin-bottom">
+      <img src="/w3images/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container">
+      <img src="/w3images/p3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b>Lorem Ipsum</b></p>
+        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      </div>
+    </div>
   </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="Spillemand.png" style="width:100%">
-    <div class="text">Spillemand på en Tagryg</div>
-  </div>
 
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+  <!-- <div class="w3-row-padding w3-grayscale"> 
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="Billeder/beyza.jpg" alt="John" style="width:50%">
+      <h3>Beyza Nuri Øzer</h3>
+      <p class="w3-opacity">CEO & Founder</p>
+      <p>Ejeren og bossen. Har taget initiativet til at sørge for denne hjemmeside blev skabt </p>
+      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="Billeder/emilie.jpg" alt="Jane" style="width:50%">
+      <h3>Emilie Laursen</h3>
+      <p class="w3-opacity">CFO & Founder</p>
+      <p>Med Mat A på gymnasiet står Emilie for finanserne. Bosidder i Brabrand området hele sit liv</p>
+      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="Billeder/phillip.jpg" alt="Mike" style="width:50%">
+      <h3>Phillip Blendvig</h3>
+      <p class="w3-opacity">CIO & Founder</p>
+      <p>Står for at hjemmesiden fungerer. Derudover ekspert i syd-Aarhus området</p>
+      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="Billeder/thomas.jpg" alt="Dan" style="width:50%">
+      <h3>Jørgen Yoghurt</h3>
+      <p class="w3-opacity">Hoved-sponsor</p>
+      <p>At have en hjemmeside kørende oppe, koster penge takket være vores sponsor har vi mulighed for det</p>
+      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
+    </div>
+  </div> -->
+
+  <!-- Contact Section -->
+  <div class="w3-container w3-padding-32" id="contact">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Spørgsmål?</h3>
+    <p>Har du nogen spørgsmål eller indvendinger til de lokationer vi viser på vores hjemmeside?</p>
+    <form action="/action_page.php" target="_blank">
+      <input class="w3-input w3-border" type="text" placeholder="Navn" required name="Name">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="Emne" required name="Subject">
+      <input class="w3-input w3-section w3-border" type="text" placeholder="Beskrivelse" required name="Comment">
+      <button class="w3-button w3-black w3-section" type="submit">
+        <i class="fa fa-paper-plane"></i> Send Besked!
+      </button>
+    </form>
+  </div>
+  
+<!-- End page content -->
 </div>
-<br>
 
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
 </body>
-
-<script>
-  var slideIndex = 1;
-  showSlides(slideIndex);
-  
-  function plusSlides(n) {
-    showSlides(slideIndex += n);
-  }
-  
-  function currentSlide(n) {
-    showSlides(slideIndex = n);
-  }
-  
-  function showSlides(n) {
-    var i;
-    var slides = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("dot");
-    if (n > slides.length) {slideIndex = 1}    
-    if (n < 1) {slideIndex = slides.length}
-    for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";  
-    }
-    for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";  
-    dots[slideIndex-1].className += " active";
-  }
-  </script>
-
 </html>
