--- a/Forside/index.html
+++ b/Forside/index.html
@@ -21,7 +21,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:100%;" id="home">
-  <img class="w3-image" src="Forside.jpg" alt="Architecture" width="100%">
+  <img class="w3-image" src="Billeder/Forside.jpg" alt="Architecture" width="100%">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Milles</b></span> <span class="w3-hide-small w3-text-light-grey">Teater</span></h1>
   </div>
@@ -50,7 +50,7 @@
    <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="Ravnholt.html" style="text-decoration:none;">
-      <img src="Billeder/test1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Billeder/Charlie.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Test Lokation</b></p>
         <p>Bænken her er sekluderet fra alt støj som trafik, det eneste der kan finde på at forstyrre en er den okasionelle hundelufter</p>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Billeder/Erasmus.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="w3-third w3-container">
-      <img src="/w3images/nature.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Billeder/Står.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lorem Ipsum</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
