--- a/Forside/index.html
+++ b/Forside/index.html
@@ -52,8 +52,13 @@
       <a href="Ravnholt.html" style="text-decoration:none;">
       <img src="Billeder/Charlie.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Test Lokation</b></p>
-        <p>Bænken her er sekluderet fra alt støj som trafik, det eneste der kan finde på at forstyrre en er den okasionelle hundelufter</p>
+        <p><b>Charlie og Chokoladefabrikken</b></p>
+        <p>
+          Charlie er drengen med det uspolerede barnesind og det rene hjerte.
+           Han lever af kålsuppe og kærlighed med sin fattige familie, og hans 
+           sødeste drøm er at besøge den hemmelighedsfulde slikfabrik og møde 
+           dens mystiske ejer, Willy Wonka.
+        </p>
       </div>
     </a>
     </div>
@@ -61,103 +66,25 @@
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="Billeder/Erasmus.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Erasmus Montanus</b></p>
+        <p>Bondedrengen Rasmus Berg har studeret i København og vender nu hjem til sin
+           fødeby på ’bjerget’. Han er arrogant og bedrevidende og skaber hurtigt bølger
+            i den hjemlige andedam. Under sit nu latinskklingende navn, Erasmus Montanus
+        </p>
       </div>
     </div>
 
     <div class="w3-third w3-container">
       <img src="Billeder/Står.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Lyden af de skuldre vi står på</b></p>
+        <p>Lyden af de skuldre vi står på er en teaterkoncert der blev opført første gang i 
+          2017 på Aarhus Teater. Teaterkoncerten er bygget op omkring udvalgte sange og salmer,
+           som er remixet og fortolket af Simon Kvamm og Marie Højlund fra bandet Nephew.</p>
       </div>
     </div>
 
   </div>
-  
-  <!-- Second Photo Grid-->
-  <div class="w3-row-padding">
-    <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container">
-      <img src="/w3images/p3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Third Photo Grid-->
-  <div class="w3-row-padding">
-    <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container">
-      <img src="/w3images/p3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-  </div>
-
-
-
-  <!-- <div class="w3-row-padding w3-grayscale"> 
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="Billeder/beyza.jpg" alt="John" style="width:50%">
-      <h3>Beyza Nuri Øzer</h3>
-      <p class="w3-opacity">CEO & Founder</p>
-      <p>Ejeren og bossen. Har taget initiativet til at sørge for denne hjemmeside blev skabt </p>
-      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="Billeder/emilie.jpg" alt="Jane" style="width:50%">
-      <h3>Emilie Laursen</h3>
-      <p class="w3-opacity">CFO & Founder</p>
-      <p>Med Mat A på gymnasiet står Emilie for finanserne. Bosidder i Brabrand området hele sit liv</p>
-      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="Billeder/phillip.jpg" alt="Mike" style="width:50%">
-      <h3>Phillip Blendvig</h3>
-      <p class="w3-opacity">CIO & Founder</p>
-      <p>Står for at hjemmesiden fungerer. Derudover ekspert i syd-Aarhus området</p>
-      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="Billeder/thomas.jpg" alt="Dan" style="width:50%">
-      <h3>Jørgen Yoghurt</h3>
-      <p class="w3-opacity">Hoved-sponsor</p>
-      <p>At have en hjemmeside kørende oppe, koster penge takket være vores sponsor har vi mulighed for det</p>
-      <p><button class="w3-button w3-light-grey w3-block">Kontakt</button></p>
-    </div>
-  </div> -->
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
