--- a/Forside/index.html
+++ b/Forside/index.html
@@ -42,9 +42,8 @@
 
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Lokationer</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Forestillinger</h3>
   </div>
-
 
    <!-- First Photo Grid-->
    <div class="w3-row-padding">
@@ -107,7 +106,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Lavet af Emilie, Frederik, Magnus & Phillip <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
 </body>
