--- a/Forside/index.html
+++ b/Forside/index.html
@@ -48,7 +48,7 @@
    <!-- First Photo Grid-->
    <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="Ravnholt.html" style="text-decoration:none;">
+      <a href="../Forestillinger/Charlie.html" style="text-decoration:none;">
       <img src="Billeder/Charlie.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Charlie og Chokoladefabrikken</b></p>
@@ -63,6 +63,7 @@
     </div>
 
     <div class="w3-third w3-container w3-margin-bottom">
+      <a href="Ravnholt.html" style="text-decoration:none;">
       <img src="Billeder/Erasmus.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Erasmus Montanus</b></p>
@@ -71,16 +72,20 @@
             i den hjemlige andedam. Under sit nu latinskklingende navn, Erasmus Montanus
         </p>
       </div>
+    </a>
     </div>
 
     <div class="w3-third w3-container">
+      <a href="Ravnholt.html" style="text-decoration:none;">
       <img src="Billeder/Står.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Lyden af de skuldre vi står på</b></p>
         <p>Lyden af de skuldre vi står på er en teaterkoncert der blev opført første gang i 
           2017 på Aarhus Teater. Teaterkoncerten er bygget op omkring udvalgte sange og salmer,
-           som er remixet og fortolket af Simon Kvamm og Marie Højlund fra bandet Nephew.</p>
+           som er remixet og fortolket af Simon Kvamm og Marie Højlund fra bandet Nephew.
+        </p>
       </div>
+    </a>
     </div>
 
   </div>
