--- a/Forestillinger/Charlie.html
+++ b/Forestillinger/Charlie.html
@@ -10,7 +10,8 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 .mySlides {display: none}
 </style>
-<body class="w3-content w3-border-left w3-border-right">
+<body>
+
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-light-grey w3-collapse w3-top" style="z-index:3;width:260px" id="mySidebar">
