--- a/Forestillinger/Charlie.html
+++ b/Forestillinger/Charlie.html
@@ -23,6 +23,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <form action="/action_page.php" target="_blank">
       <p><label><i class="fa fa-calendar-check-o"></i> Navn på Bestilling</label></p>
       <input class="w3-input w3-border" type="text" placeholder="Navn" name="CheckIn" required>          
+      <p><label><i class="fa fa-calendar-check-o"></i> Email</label></p>
+      <input class="w3-input w3-border" type="text" placeholder="Email" name="CheckIn" required>       
       <p><label><i class="fa fa-calendar-o"></i> Dato</label></p>
       <input class="w3-input w3-border" type="text" placeholder="DD MM YYYY" name="CheckOut" required>         
       <p><label><i class="fa fa-male"></i> Antal</label></p>
@@ -51,39 +53,39 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
   <div class="w3-container" id="apartment">
     <h2 class="w3-text-green">Charlie og Chokoladefabrikken</h2>
     <div class="w3-display-container mySlides">
-    <img src="Billeder/Charlie1.jpg" style="width:100%;margin-bottom:-6px">
+    <img src="Billeder/Charlie3.jpg" style="width:70%;margin-bottom:-6px;margin-left:150px">
       <div class="w3-display-bottomleft w3-container w3-black">
-        <p>Living Room</p>
+        <p>Plakat</p>
       </div>
     </div>
     <div class="w3-display-container mySlides">
-    <img src="Billeder/Charlie2.jpg" style="width:100%;margin-bottom:-6px">
+    <img src="Billeder/Charlie2.jpg" style="width:70%;margin-bottom:-6px;margin-left:150px">
       <div class="w3-display-bottomleft w3-container w3-black">
-        <p>Dining Room</p>
+        <p>Forestillings billede</p>
       </div>
     </div>
     <div class="w3-display-container mySlides">
-    <img src="Billeder/Charlie3.jpg" style="width:100%;margin-bottom:-6px">
+    <img src="Billeder/Charlie1.jpg" style="width:70%;margin-bottom:-6px;margin-left:150px">
       <div class="w3-display-bottomleft w3-container w3-black">
-        <p>Bedroom</p>
+        <p>Skuespillerne</p>
       </div>
     </div>
     <div class="w3-display-container mySlides">
-    <img src="Billeder/Charlie4.jpg" style="width:100%;margin-bottom:-6px">
+    <img src="Billeder/Charlie4.jpg" style="width:70%;margin-bottom:-6px;margin-left:150px">
       <div class="w3-display-bottomleft w3-container w3-black">
-        <p>Living Room II</p>
+        <p>Blå dame</p>
       </div>
     </div>
   </div>
   <div class="w3-row-padding w3-section">
     <div class="w3-col s3">
-      <img class="demo w3-opacity w3-hover-opacity-off" src="Billeder/Charlie1.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(1)" title="Living room">
+      <img class="demo w3-opacity w3-hover-opacity-off" src="Billeder/Charlie3.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(1)" title="Living room">
     </div>
     <div class="w3-col s3">
       <img class="demo w3-opacity w3-hover-opacity-off" src="Billeder/Charlie2.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(2)" title="Dining room">
     </div>
     <div class="w3-col s3">
-      <img class="demo w3-opacity w3-hover-opacity-off" src="Billeder/Charlie3.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(3)" title="Bedroom">
+      <img class="demo w3-opacity w3-hover-opacity-off" src="Billeder/Charlie1.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(3)" title="Bedroom">
     </div>
     <div class="w3-col s3">
       <img class="demo w3-opacity w3-hover-opacity-off" src="Billeder/Charlie4.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(4)" title="Second Living Room">
