--- a/Forside/index.html
+++ b/Forside/index.html
@@ -48,7 +48,7 @@
    <!-- First Photo Grid-->
    <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="../Forestillinger/Charlie.html" style="text-decoration:none;">
+      <a href="../Forestillinger/Charlie.php" style="text-decoration:none;">
       <img src="Billeder/Charlie.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Charlie og Chokoladefabrikken</b></p>
