--- a/OmOs/index.html
+++ b/OmOs/index.html
@@ -26,6 +26,9 @@
       <div class="logotop">
       </div>
     </div>
+
+
+    <iframe width="640" height="480" src="https://maps.google.dk/maps?f=q&amp;source=s_q&amp;hl=da&amp;geocode=&amp;q=Odder+Golfklub,+Odder&amp;aq=0&amp;oq=Odder+gol&amp;sll=56.182636,9.565772&amp;sspn=0.259479,0.705872&amp;t=m&amp;ie=UTF8&amp;hq=Odder+Golfklub,&amp;hnear=Odder&amp;cid=17434050630184792352&amp;ll=55.951218,10.107594&amp;spn=0.046134,0.109863&amp;z=13&amp;iwloc=A&amp;output=embed" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 </body>
 
 </html>
