--- a/OmOs/index.html
+++ b/OmOs/index.html
@@ -27,8 +27,7 @@
       </div>
     </div>
 
-
-    <iframe width="640" height="480" src="https://maps.google.dk/maps?f=q&amp;source=s_q&amp;hl=da&amp;geocode=&amp;q=Odder+Golfklub,+Odder&amp;aq=0&amp;oq=Odder+gol&amp;sll=56.182636,9.565772&amp;sspn=0.259479,0.705872&amp;t=m&amp;ie=UTF8&amp;hq=Odder+Golfklub,&amp;hnear=Odder&amp;cid=17434050630184792352&amp;ll=55.951218,10.107594&amp;spn=0.046134,0.109863&amp;z=13&amp;iwloc=A&amp;output=embed" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+    <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Fenrisvej%2033+(%C3%85rhus%20Statsgymnasium)&amp;t=h&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.maps.ie/draw-radius-circle-map/">Measure km radius</a></div>
 </body>
 
 </html>
