Navbar på alle sider

--- a/OmOs/index.html
+++ b/OmOs/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../header.css">
   <link rel="icon" href="Billeder/PenisAvatar.jpg" type="image/gif" sizes="16x16">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 
 
@@ -12,20 +15,19 @@
 
 
 <body>
-    <!-- Header -->
-    <div class="topnav">
-      <a href="../Forside/index.html">Forside</a>
-      <a href="../BesogOs/index.html">Besøg os</a>
-      <a href="../Deltag/index.html">Deltag</a>
-      <a href="../StotOs/index.html">Støt os</a>
-      <a class="active" href="../OmOs/index.html">Om os</a>
-      <a href="../Uddannelse/index.html">Uddannelse</a>
-
-      <a href="../Donation/index.html">Donation</a>
-      <a href="../Lokation/index.html">Lokation</a>
-      <div class="logotop">
-      </div>
+   <!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="../Forside/index.html#home" class="w3-bar-item w3-button"><b>Milles</b> Teater</a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="../Forside/index.html#projects" class="w3-bar-item w3-button">Forestillinger</a>
+      <a href="../OmOs/index.html" class="w3-bar-item w3-button">Find Vej!</a>
+      <a href="../StotOs/index.php#contact" class="w3-bar-item w3-button">Kontakt</a>
     </div>
+  </div>
+</div>
+
 
     <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Fenrisvej%2033+(%C3%85rhus%20Statsgymnasium)&amp;t=h&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.maps.ie/draw-radius-circle-map/">Measure km radius</a></div>
 </body>
