--- a/Forside/index.html
+++ b/Forside/index.html
@@ -6,18 +6,18 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Milles</b> Teater</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Forestillinger</a>
-      <a href="#about" class="w3-bar-item w3-button">Om os</a>
-      <a href="#contact" class="w3-bar-item w3-button">Kontakt</a>
+  <!-- Navbar (sit on top) -->
+  <div class="w3-top">
+    <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+      <a href="../Forside/index.html#home" class="w3-bar-item w3-button"><b>Milles</b> Teater</a>
+      <!-- Float links to the right. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+        <a href="../Forside/index.html#projects" class="w3-bar-item w3-button">Forestillinger</a>
+        <a href="../OmOs/index.html" class="w3-bar-item w3-button">Find Vej!</a>
+        <a href="../StotOs/index.php#contact" class="w3-bar-item w3-button">Kontakt</a>
+      </div>
     </div>
   </div>
-</div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:100%;" id="home">
