--- a/OmOs/index.html
+++ b/OmOs/index.html
@@ -25,11 +25,12 @@
       <a href="../OmOs/index.html" class="w3-bar-item w3-button">Find Vej!</a>
       <a href="../StotOs/index.php#contact" class="w3-bar-item w3-button">Kontakt</a>
     </div>
+    <div style="width: 100%"><iframe width="100%" height="560" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" margin-top="50px" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Fenrisvej%2033+(%C3%85rhus%20Statsgymnasium)&amp;t=h&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
   </div>
 </div>
 
 
-    <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Fenrisvej%2033+(%C3%85rhus%20Statsgymnasium)&amp;t=h&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.maps.ie/draw-radius-circle-map/">Measure km radius</a></div>
+    
 </body>
 
 </html>
