--- a/Forside/index.html
+++ b/Forside/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Aarhus Lokationer</title>
+<title>Aros Teater</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -9,7 +9,7 @@
   <!-- Navbar (sit on top) -->
   <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-      <a href="../Forside/index.html#home" class="w3-bar-item w3-button"><b>Milles</b> Teater</a>
+      <a href="../Forside/index.html#home" class="w3-bar-item w3-button"><b>Aros</b> Teater</a>
       <!-- Float links to the right. Hide them on small screens -->
       <div class="w3-right w3-hide-small">
         <a href="../Forside/index.html#projects" class="w3-bar-item w3-button">Forestillinger</a>
@@ -23,7 +23,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:100%;" id="home">
   <img class="w3-image" src="Billeder/Forside.jpg" alt="Architecture" width="100%">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Milles</b></span> <span class="w3-hide-small w3-text-light-grey">Teater</span></h1>
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Aros</b></span> <span class="w3-hide-small w3-text-light-grey">Teater</span></h1>
   </div>
 </header>
 
