--- a/Forside/index.html
+++ b/Forside/index.html
@@ -32,12 +32,9 @@
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Hvad er det her?!</h3>
-    <p>Sommeren er på vej og regeringen løsner endelig grebet om det offentlige forsamlingsforbudet, derfor er det ideelt at kunne komme ud og hygge sig med sine venner, 
-      familie eller den specielle ene, vores hjemmeside har noget for alle! Vores hold har brugt utallige timer på at finde de steder i Aarhus som er perfekte at hænge ud.
-      Hvis du har problemer med at finde et sted at være, er dette stedet for dig. Vores hjemmeside viser udendørs arealer hvor der er bænke, toiletter, græsareal at spille 
-      på og hvor mange mennesker man burde regne med der er, derudover kan folk kommenterer på stedet og give en bedømmelse
-    </p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Velkommen</h3>
+    <p>Aarhus Teater er Danmarks største landsdelsscene med fem scener under samme tag. Det er opført i 
+      slutningen af 1890'erne på initiativ af en kreds af teaterinteresserede borgere i Aarhus og blev indviet 15. september 1900.</p>
   </div>
 
   <!-- Project Section -->
