--- a/OmOs/index.html
+++ b/OmOs/index.html
@@ -18,7 +18,7 @@
    <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="../Forside/index.html#home" class="w3-bar-item w3-button"><b>Milles</b> Teater</a>
+    <a href="../Forside/index.html#home" class="w3-bar-item w3-button"><b>Aros</b> Teater</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="../Forside/index.html#projects" class="w3-bar-item w3-button">Forestillinger</a>
