--- a/Forestillinger/kvittering.html
+++ b/Forestillinger/kvittering.html
@@ -19,6 +19,6 @@
 
 
 <body>  
-<h1 >Tak for din bestiling, og fuck din far</h1>
+<h1 >Tak for din bestiling! Du er en god kunde</h1>
 </body>
 </html>
