--- a/Forestillinger/kvittering.html
+++ b/Forestillinger/kvittering.html
@@ -20,5 +20,9 @@
 
 <body>  
 <h1 >Tak for din bestiling! Du er en god kunde</h1>
+
+
+<button type="button" onclick="location.href='http://localhost/teater/Forside/index.html';" >Tilbage</button>
+
 </body>
 </html>
