--- a/Forestillinger/kvittering.html
+++ b/Forestillinger/kvittering.html
@@ -15,6 +15,16 @@
     bottom:0px;
     margin:auto
   }
+
+  button {
+    position:absolute;
+    text-align:center;
+    left:0px;
+    right:0px;
+    top:250px;
+    bottom:0px;
+    margin:auto
+  }
   </style>
 
 
