--- a/Forestillinger/kvittering.html
+++ b/Forestillinger/kvittering.html
@@ -29,7 +29,7 @@
 
 
 <body>  
-<h1 >Tak for din bestiling! Du er en god kunde</h1>
+<h1 >Tak for din bestilling! Du er en god kunde</h1>
 
 
 <button type="button" onclick="location.href='http://localhost/teater/Forside/index.html';" >Tilbage</button>
