--- a/Forestillinger/kvittering.html
+++ b/Forestillinger/kvittering.html
@@ -17,10 +17,20 @@
   }
 
   button {
-    text-align:center;
-    top:300px;
-    margin:auto
+    background-color: #858585;
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    opacity: 0.6;
+    transition: 0.3s;
+    text-decoration: none;
+    cursor: pointer;
+    top:250px;
   }
+
+  button:hover {opacity: 1}
   </style>
 
 
@@ -28,7 +38,7 @@
 <h1 >Tak for din bestilling! Du er en god kunde</h1>
 
 
-<button type="button" onclick="location.href='http://localhost/teater/Forside/index.html';" >Tilbage</button>
+<button type="button" onclick="location.href='http://localhost/teater/Forside/index.html';" >Tilbage til forside</button>
 
 </body>
 </html>
