--- a/Forestillinger/kvittering.html
+++ b/Forestillinger/kvittering.html
@@ -3,7 +3,7 @@
 <title>Aros Teater</title>
 <meta charset="UTF-8">
 <style> body {
-    background-color: linen;
+    background-color: rgb(255, 255, 255);
   }
   
   h1 {
@@ -16,7 +16,7 @@
     margin:auto
   }
 
-  button {
+    button {
     background-color: #858585;
     border: none;
     color: rgb(255, 255, 255);
@@ -26,8 +26,6 @@
     opacity: 0.6;
     transition: 0.3s;
     text-decoration: none;
-    cursor: pointer;
-    top:250px;
   }
 
   button:hover {opacity: 1}
@@ -35,8 +33,9 @@
 
 
 <body>  
+  <div style=text-align:center;>
 <h1 >Tak for din bestilling! Du er en god kunde</h1>
-
+</div>
 
 <button type="button" onclick="location.href='http://localhost/teater/Forside/index.html';" >Tilbage til forside</button>
 
